# modern-uri

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  modern-uri.cabal  stack.yaml
.github/workflows/: ci.yaml  haskell-ci.yml  ormolu.yaml
Text/: URI.hs
Text/URI/: Lens.hs  Parser.hs  QQ.hs  Render.hs  Types.hs  Utils.hs
Text/URI/Parser/: ByteString.hs  Text.hs
Text/URI/Parser/Text/: Utils.hs
bench/memory/: Main.hs
bench/speed/: Main.hs
tests/Text/: QQSpec.hs  URISpec.hs
