cabal-version:   2.4
name:            modern-uri
version:         0.3.6.1
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.6.3 ghc ==9.8.2 ghc ==9.10.1
homepage:        https://github.com/mrkkrp/modern-uri
bug-reports:     https://github.com/mrkkrp/modern-uri/issues
synopsis:        Modern library for working with URIs
description:     Modern library for working with URIs.
category:        Text
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/modern-uri.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        Text.URI
        Text.URI.Lens
        Text.URI.QQ

    other-modules:
        Text.URI.Parser.ByteString
        Text.URI.Parser.Text
        Text.URI.Parser.Text.Utils
        Text.URI.Render
        Text.URI.Types

    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.4 && <3,
        base >=4.15 && <5,
        bytestring >=0.2 && <0.13,
        containers >=0.5 && <0.8,
        deepseq >=1.3 && <1.6,
        exceptions >=0.6 && <0.11,
        hashable >=1.3 && <2,
        megaparsec >=8 && <10,
        mtl >=2 && <3,
        profunctors >=5.2.1 && <6,
        reflection >=2 && <3,
        tagged >=0.8 && <0.9,
        template-haskell >=2.10 && <2.24,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options: -Wall -Werror -Wpartial-fields -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    hs-source-dirs:     tests
    other-modules:
        Text.QQSpec
        Text.URISpec

    default-language:   GHC2021
    build-depends:
        QuickCheck >=2.4 && <3,
        base >=4.15 && <5,
        bytestring >=0.2 && <0.13,
        hspec >=2 && <3,
        hspec-megaparsec >=2 && <3,
        megaparsec >=8 && <10,
        modern-uri,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

benchmark bench-speed
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/speed
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5.0,
        bytestring >=0.2 && <0.13,
        criterion >=0.6.2.1 && <1.7,
        megaparsec >=8 && <10,
        modern-uri,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

benchmark bench-memory
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench/memory
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5,
        bytestring >=0.2 && <0.13,
        megaparsec >=8 && <10,
        modern-uri,
        text >=0.2 && <2.2,
        weigh >=0.0.4

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
